# clipline

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CODEX_NOTES.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  ddoc.md  handoff.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  security.yml
.macroscope/: approvability.md  ignore
.macroscope/check-run-agents/: clipline-architecture.md
.macroscope/correctness/: capture-media.md  ci-dependencies.md  clipline-project-rules.md  game-events-storage.md  tauri-ui.md
.playwright-mcp/: page-2026-06-10T05-34-52-167Z.yml  page-2026-06-10T05-44-02-445Z.yml  page-2026-06-10T05-44-35-175Z.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-2-report.md  task-7-report.md
apps/clipline-app/: Cargo.toml  build.rs  ffmpeg-runtime.json  tauri.conf.json  tauri.macos.conf.json  tauri.standalone.conf.json  webview2-fixed-runtime.json
apps/clipline-app/capabilities/: default.json
apps/clipline-app/ffmpeg/: README.md
apps/clipline-app/macos/: ScreenCaptureKitHelper.swift
apps/clipline-app/plugin-seeds/league_of_legends/: clipline-plugin.json
apps/clipline-app/plugin-seeds/league_of_legends/assets/event-rail/: README.md
apps/clipline-app/plugin-seeds/league_of_legends/assets/markers/: README.md
apps/clipline-app/src/: app.rs  bounded_http.rs  cloud.rs  cloud_macos.rs  cloud_upload.rs  credential_transaction.rs  cs2_markers.rs  game_discovery.rs  game_icon.rs  game_icon_macos.rs  game_identity.rs  game_plugins.rs  game_plugins_macos.rs  games.rs  games_macos.rs  hotkeys.rs  hotkeys_macos.rs  library.rs  library_macos.rs  macos_capture.rs  main.rs  markers.rs  memory.rs  memory_macos.rs  osu_api.rs  osu_enrichment.rs  platform.rs  poster.rs  poster_macos.rs  service.rs  service_macos.rs  settings.rs  sound.rs  updates.rs  util.rs  video_encoder.rs  windows.rs
apps/clipline-app/src/app/: diagnostic_log.rs  diagnostics.rs  support.rs
apps/clipline-app/src/cloud/: cache_identity.rs
apps/clipline-app/src/fallback/: manifest.rs  media.rs  mod.rs  security.rs  server.rs  startup.rs
apps/clipline-app/src/host/: events.rs  library.rs  mod.rs  native.rs  runtime.rs
apps/clipline-app/src/platform/: macos.rs  mod.rs  types.rs  windows.rs
apps/clipline-app/src/service/: media_root.rs
apps/clipline-app/src/settings/: cloud.rs  games.rs  hotkey.rs  mod.rs  osu.rs  persistence.rs  tests.rs  types.rs  validation.rs
apps/clipline-app/src/windows/: credential_store.rs  mod.rs
apps/clipline-app/tests/: cloud_core.rs  macos_shell_contract.rs  player_core.rs  repository_security.rs  support_core.rs  ui_contract.rs
apps/clipline-app/ui/: app-core.js  bootstrap.mjs  client-bridge.js  cloud-core.js  cloud-core.mjs  cloud.js  index.html  library.js  main.js  player-core.js  player-core.mjs  presentation-core.js  presentation.mjs  review-player.js  settings.js  styles.css  support-core.js  support.js
apps/clipline-app/ui/assets/markers/: README.md
crates/clipline-buffer/: Cargo.toml
crates/clipline-buffer/src/: disk.rs  estimate.rs  lib.rs  planning.rs  ring.rs  segment.rs
crates/clipline-capture/: Cargo.toml
crates/clipline-capture/examples/: record_smoke.rs  wgc_smoke.rs
crates/clipline-capture/src/: annexb.rs  audio_gate.rs  av1.rs  avsync.rs  clock.rs  cpu_video.rs  diagnostics.rs  ffmpeg.rs  ffmpeg_encoder.rs  framing.rs  hevc.rs  lib.rs  mock.rs  opus.rs  pcm.rs  pipeline.rs  probe.rs  traits.rs
crates/clipline-capture/src/windows/: d3d11.rs  display.rs  dxgi_dup.rs  mft.rs  mft_probe.rs  mod.rs  nv12.rs  wasapi.rs  wgc.rs  window.rs
crates/clipline-capture/tests/: diagnostics.rs  end_to_end.rs  ffmpeg_encode.rs
crates/clipline-cs2/: Cargo.toml
crates/clipline-cs2/src/: lib.rs  listener.rs  payload.rs  tracker.rs
crates/clipline-cs2/tests/: casual_round_e2e.rs
crates/clipline-events/: Cargo.toml
crates/clipline-events/src/: lib.rs  markers.rs  schema.rs  sync.rs
crates/clipline-lol/: Cargo.toml
crates/clipline-lol/src/: client.rs  lib.rs  normalize.rs  poller.rs  raw.rs  tracker.rs
crates/clipline-lol/tests/: client_http.rs  markers_e2e.rs  poll_once.rs
crates/clipline-mp4/: Cargo.toml
crates/clipline-mp4/src/: av1c.rs  bitread.rs  box_header.rs  boxes.rs  fragment.rs  hvcc.rs  init.rs  lib.rs  trim.rs  walker.rs  writer.rs
crates/clipline-mp4/tests/: ffprobe_validation.rs  hybrid_roundtrip.rs  multitrack.rs
crates/clipline-storage/: Cargo.toml
crates/clipline-storage/src/: lib.rs  sessions.rs
crates/clipline-test-utils/: Cargo.toml
crates/clipline-test-utils/src/: lib.rs
docs/: BUG-SCAN.md  CODE_SIGNING.md  COMPATIBILITY.md  PRIVACY.md  SECURITY-AUDIT.md  TROUBLESHOOTING.md  dependency-policy.json  release-updates.md  release.workflow.yml
docs/superpowers/plans/: 2026-06-10-clipline-audio-muxing.md  2026-06-10-clipline-audio-pipeline.md  2026-06-10-clipline-capture-traits.md  2026-06-10-clipline-core-foundation.md  2026-06-10-clipline-hybrid-mp4.md  2026-06-10-clipline-mft-encoder.md  2026-06-10-clipline-wgc-capture.md  2026-06-11-clipline-av-sync.md  2026-06-11-clipline-event-markers.md  2026-06-11-clipline-library-view.md  2026-06-11-clipline-tauri-shell.md  2026-06-11-clipline-wasapi-loopback.md  2026-06-12-audio-devices-and-mic.md  2026-06-12-capture-region.md  2026-06-12-clipline-disk-quota-gc.md  2026-06-12-clipline-review-player-v2.md  2026-06-12-clipline-review-workspace.md  2026-06-12-clipline-settings.md  2026-06-12-clipline-trim-export.md  2026-06-12-ffmpeg-encoder-matrix.md  2026-06-12-hotkey-recorder.md  2026-06-12-recording-controls-cleanup.md  2026-06-12-review-player-polish.md  2026-06-12-session-folders.md  2026-06-12-settings-page.md  2026-06-12-settings-recording-ux.md  2026-06-12-sidebar-rail.md  2026-06-12-stage-overlay-transport.md  2026-06-13-custom-game-detection.md  2026-06-13-full-session-recording.md  2026-06-13-ram-reduction-package.md  (+129 more)
scripts/: osu_recent_spike.ps1  stage-ffmpeg-resource.ps1  validate-fallback-client.ps1  verify-webview2-runtime.ps1
(+16 files in other folders)
