[workspace]
resolver = "2"
members = [
    "crates/clipline-events",
    "crates/clipline-lol",
    "crates/clipline-buffer",
    "crates/clipline-storage",
    "crates/clipline-capture",
    "crates/clipline-mp4",
    "crates/clipline-test-utils",
    "apps/clipline-app",
]
exclude = ["third-party/shiguredo_opus"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
shiguredo_opus = { path = "third-party/shiguredo_opus", version = "=2026.1.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
httpmock = "0.8"

[patch.crates-io]
# wayland-scanner 0.31.10's published quick-xml 0.39 dependency is affected by
# RUSTSEC-2026-0194/0195. Upstream has the 0.41 fix but has not released it yet.
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs", rev = "a55c54b4e138e29181d63908ece06fd2a13550a0" }
