[package]
name = "clipline-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Tauri (and through it webkit2gtk on Linux) is Windows-gated: capture and
# encode are platform-bound anyway, and ubuntu CI must build without
# system webview libraries. Non-Windows targets get a stub main.
[target.'cfg(windows)'.dependencies]
clipline-capture = { path = "../../crates/clipline-capture" }
clipline-events = { path = "../../crates/clipline-events" }
clipline-lol = { path = "../../crates/clipline-lol" }
clipline-mp4 = { path = "../../crates/clipline-mp4" }
clipline-storage = { path = "../../crates/clipline-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
chrono = "0.4.45"
rfd = "0.15"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
boa_engine = "0.21.1"
