[package]
name = "clipline-app"
version = "0.1.13"
edition.workspace = true
license.workspace = true

# Tauri (and through it webkit2gtk on Linux) is Windows-gated: capture and
# encode are platform-bound anyway, and ubuntu CI must build without
# system webview libraries. Non-Windows targets get a stub main.
[target.'cfg(windows)'.dependencies]
clipline-capture = { path = "../../crates/clipline-capture" }
clipline-events = { path = "../../crates/clipline-events" }
clipline-lol = { path = "../../crates/clipline-lol" }
clipline-mp4 = { path = "../../crates/clipline-mp4" }
clipline-storage = { path = "../../crates/clipline-storage" }
# Pinned to an immutable rev (not a branch): a branch ref isn't reproducible —
# a force-push or rename silently breaks every build. Bump the rev deliberately.
clipline-cloud-api = { git = "https://github.com/dain98/clipline-cloud", rev = "8dd49fcf35e5bb9acbf2681cc35c8d161cbfad5d" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
chrono = "0.4.45"
rfd = "0.15"
png = "0.17"
base64 = "0.22"
rodio = { version = "0.17", default-features = false, features = ["vorbis"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
boa_engine = "0.21.1"
clipline-test-utils = { path = "../../crates/clipline-test-utils" }
httpmock = { workspace = true }
