[package]
name = "clipline-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clipline-buffer = { path = "../clipline-buffer" }
clipline-mp4 = { path = "../clipline-mp4" }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Performance",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }
