[package]
name = "clipline-lol"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clipline-events = { path = "../clipline-events" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
